--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,13 @@ services:
     environment:
       - POSTGRES_USER=translator_test_db
       - POSTGRES_PASSWORD=mysecretpassword
+
+  quarkus:
+    build:
+      context: .
+      dockerfile: ./src/main/docker/Dockerfile.multi
+    depends_on:
+      - db
+    restart: unless-stopped
+    ports:
+      - 8080:8080
