--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = translator_test_db
 quarkus.datasource.password = mysecretpassword
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/translator_test_db
+#quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/translator_test_db
+quarkus.datasource.jdbc.url = jdbc:postgresql://db:5432/translator_test_db
 
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation=drop-and-create
